# harnetics

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_zh.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
docs/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  MEMORY.md
docs/bank/: experience.md  opinions.md  world.md
docs/daily/: 2026-04-11.md  2026-04-19.md
docs/design-docs/prototype2/: package-lock.json  package.json  vite.config.ts
docs/superpowers/: AGENTS.md
frontend/: AGENTS.md
frontend/src/: App.tsx
specs/: AGENTS.md
specs/001-aerospace-doc-alignment/: spec.md  tasks.md
specs/002-react-frontend-replacement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ai-vector-impact-draft/: spec.md  tasks.md
specs/005-openai-compatible-llm-client/: AGENTS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-remove-legacy-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-opensource-readiness/: plan.md  spec.md  tasks.md
src/harnetics/: AGENTS.md  __init__.py  app.py  config.py  models.py  repository.py
tests/: AGENTS.md  conftest.py  test_app.py  test_catalog_routes.py  test_e2e_mvp_scenario.py  test_env_routing.py  test_graph_store.py  test_impact_analyzer.py  test_llm_client.py  test_repository.py
(+80 files in other folders)
