[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harnetics"
version = "0.1.0"
description = "Aerospace document alignment workbench — cross-department traceability, draft generation, and change impact analysis powered by document graph and LLM."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
  { name = "Sam", email = "sam@harnetics.dev" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Markup",
]
dependencies = [
  "fastapi>=0.116.0",
  "python-frontmatter>=1.1.0",
  "PyYAML>=6.0.2",
  "httpx>=0.28.1",
  "uvicorn>=0.35.0",
  "chromadb>=0.6.0",
  "sentence-transformers>=3.4.0",
  "python-dotenv>=1.0.0",
  "typer>=0.15.0",
  "rich>=13.9.0",
  "openai>=1.5.0",
  "python-multipart>=0.0.26",
]

[project.urls]
Homepage = "https://github.com/anthropic-sam/harnetics"
Documentation = "https://github.com/anthropic-sam/harnetics/blob/main/docs/"
Repository = "https://github.com/anthropic-sam/harnetics"
Issues = "https://github.com/anthropic-sam/harnetics/issues"
Changelog = "https://github.com/anthropic-sam/harnetics/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-s"

[tool.hatch.build.targets.wheel]
packages = ["src/harnetics"]
